--- a/vsftpd.conf
+++ b/vsftpd.conf
@@ -55,7 +55,7 @@ xferlog_enable=YES
 #
 # The name of log file when xferlog_enable=YES and xferlog_std_format=YES
 # WARNING - changing this filename affects /etc/logrotate.d/vsftpd.log
-#xferlog_file=/var/log/xferlog
+xferlog_file=/var/log/vsftpd/vsftpd.log
 #
 # Switches between logging into vsftpd_log_file and xferlog_file files.
 # NO writes to vsftpd_log_file, YES to xferlog_file
@@ -120,7 +120,7 @@ listen=YES
 # Make sure, that one of the listen options is commented !!
 #listen_ipv6=YES
 
-pam_service_name=vsftpd
+pam_service_name=ftp
 tcp_wrappers=YES
 
 # script to init pem:
@@ -139,15 +139,15 @@ rsa_private_key_file=/etc/ssl/private/vsftpd.pem
 # use of SSL for both data transfer and login
 # routines. This will make the security mandatory:
 
-ssl_enable=YES
+ssl_enable=NO
 allow_anon_ssl=NO
-force_local_data_ssl=YES
-force_local_logins_ssl=YES
+force_local_data_ssl=NO
+force_local_logins_ssl=NO
 
 # Next, we will restrict the type of connection to
 # TLS, which is more secure than SSL. We will do this
 # by explicitly allowing TLS and denying the use of SSL:
-ssl_tlsv1=YES
+ssl_tlsv1=NO
 ssl_sslv2=NO
 ssl_sslv3=NO
 
@@ -162,11 +162,15 @@ ssl_ciphers=HIGH
 
 
 pasv_enable=YES
-pasv_min_port=64000
+pasv_min_port=21000
 pasv_max_port=64321
 port_enable=YES
 
 # ref: https://www.benscobie.com/fixing-500-oops-vsftpd-refusing-to-run-with-writable-root-inside-chroot/
 allow_writeable_chroot=YES
+
+port_enable=YES
+connect_from_port_20=YES
+ftp_data_port=20
 
 
